Исправления по ревью на финальное ТЗ 12 спринта - добавлены дто, скорректированы модели, соответственно поправлена логика, добавлено логирование в сервисы; плюс удалены из сервисов не востребованные методы.